added a header section it contains the home about us contact us and the sign up and login buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Housing Website</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<!-- <body>
+<body>
   <header>
     <div class="heading">
         <img src="./images /apartments.png" alt="icon home">
@@ -18,9 +18,9 @@
     <button>Login </button>
     </div>
   </header>
-
+<!-- 
   <div class="house-listings">
-    <!-- House Listing 1 -->
+
     <div class="house">
       <img src="./images/house1.jpg" alt="House 1">
       <div class="house-info">
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <!-- House Listing 2 -->
+
     <div class="house">
       <img src="./images/house2.jpg" alt="House 2">
       <div class="house-info">
@@ -42,8 +42,9 @@
       </div>
     </div>
 
-    <!-- Add more house listings here -->
-    <!-- House Listing 3 -->
+
+  
+
     <div class="house">
       <img src="./images/house3.jpg" alt="House 3">
       <div class="house-info">
@@ -54,7 +55,9 @@
       </div>
     </div>
 
-    <!-- House Listing 4 -->
+    
+
+
     <div class="house">
       <img src="./images/house4.jpg" alt="House 4">
       <div class="house-info">
@@ -65,7 +68,8 @@
       </div>
     </div>
 
-    <!-- Add more house listings here -->
+    
+
 
   </div>
   <h2>Happy Clients</h2>
@@ -91,50 +95,66 @@
 </div>
 
 
-<!-- about us section-->
 
 <div class="about">
     <h1>About Us</h1>
     <img src="./images /5-features-families-want-in-rental-homes.jpg">
     <div id="mission"><h2>Mission</h2>
-    <p>At Urban Nest, our mission is to provide accessible and affordable housing solutions in urban areas.
-        We understand the challenges individuals face when searching for suitable rental properties, and we
+    <p>At Urban Nest, our mission is to provide accessible and affordable housing solutions in urban areas.<br>
+        We understand the challenges individuals face when searching for suitable rental properties,<br> and we
         aim to simplify the process by offering a user-friendly platform that connects tenants with landlords.
        </p>
     </div>
+    <div id="vision">
        <h2>Vision</h2>
-    <p> Our vision is to create a seamless and efficient housing experience for everyone. We believe that everyone deserves a comfortable and safe place to call home, and we strive to bridge the gap between tenants and landlords, ensuring transparency, reliability, and satisfaction for both parties.
+    <p> Our vision is to create a seamless and efficient housing experience for everyone.<br> We believe that everyone deserves a comfortable and safe place to call home,<br> and we strive to bridge the gap between tenants and landlords, ensuring transparency, reliability, and satisfaction for both parties.
     </p>
+</div>
+    <div id="location">
+        <h1>Location</h1>
+        <p>Our offices are located in thika town </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.1618745546475!2d37.069680074267886!3d-1.0393610989506366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f4e62715d436f%3A0xab64e609237cb7f5!2sThika%20Town!5e0!3m2!1sen!2ske!4v1688552177800!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h3>Working Hours</h3>
+        <p>opening: 9:00am</p>
+        <p>closing: 4:00 pm</p>
+    </div>
+  
     </div>
 
 
 
 
 
+<div class="contact">
+    <h1>Contact Us</h1>
+    <div id="inputss">
+    <input type="text" placeholder="name" id="name">
+    <input type="text" placeholder="email" id="email">
+  </div>  
+  <div id="inputs">
+    <input type="text" placeholder="message" id="message">
+  </div>
+    <button id="btn ">Send</button>
+<div class="social">
+    <h2>Social Media Platforms</h2>
+      <div id="whatsapp">
+        <p>Whatsapp</p>
+        <a href="https://wa.me/+2540112043557" target="_blank">  
+        <img src="./images /whatsapp bs.png"></a>
+    </div>
+    <div id="facebook">
+        <p>Facebook</p>
+        <a href="https://www.facebook.com/Alexi Alex" target="_blank">
+        <img src="./images /facebook logo .png"></a>
+        </div>
+        <div id="twitter">
+            <p>twitter</p>
+        <a href="https://twitter.com/@AlexiGikun71556" target="_blank">
+        <img src="./images /twitter logo .png"></a>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </div>
+</div>
+</div>
   <footer>
     <p>Contact:(+254) 112043557</p>
     <p>Email:urbannest@gmail.com</p>
