added the home section that will contain images and details from api

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button>Login </button>
     </div>
   </header>
-<!-- 
+ <!--housing section-->
   <div class="house-listings">
 
     <div class="house">
@@ -69,7 +69,7 @@
     </div>
 
     
-
+<!--
 
   </div>
   <h2>Happy Clients</h2>
