added about section it contains mission vision and the location of the office is emmbeded

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div>
     </div>
 
-
   </div>
+  <!-- happy clients section -->
   <h2>Happy Clients</h2>
 <div class="clients">
     <div class="client1">
@@ -92,7 +92,7 @@
     </div>
 </div>
 
-<!--
+<!-- about section -->
 
 <div class="about">
     <h1>About Us</h1>
@@ -121,7 +121,7 @@
 
 
 
-
+<!--  
 
 <div class="contact">
     <h1>Contact Us</h1>
