--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
     </div>
 
 
-
-<!--  
-
+    <!-- contact section -->
 <div class="contact">
     <h1>Contact Us</h1>
     <div id="inputss">
@@ -153,6 +151,7 @@
         </div>
 </div>
 </div>
+<!--  
   <footer>
     <p>Contact:(+254) 112043557</p>
     <p>Email:urbannest@gmail.com</p>
