added a footer section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
 </div>
 </div>
-<!--  
+<!--  footer section -->
   <footer>
     <p>Contact:(+254) 112043557</p>
     <p>Email:urbannest@gmail.com</p>
@@ -163,6 +163,6 @@
         <li>Location</li>
     </ul>
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
