--- a/index.html
+++ b/index.html
@@ -5,70 +5,41 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <!-- home sectio -->
   <header>
     <div class="heading">
         <img src="./images /apartments.png" alt="icon home">
     <h1>Urban Nest</h1>
+    <div id="list">
     <ul>
-        <li a href="#home">HOME</li>
-        <li a href="#home">About Us </li>
-        <li a href="#home">Contact Us</li>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+      <button>Add Appartment</button>
     </ul>
-    <button>Sign Up</button>
-    <button>Login </button>
-    </div>
-  </header>
- <!--housing section-->
-  <div class="house-listings">
-
-    <div class="house">
-      <img src="./images/house1.jpg" alt="House 1">
-      <div class="house-info">
-        <h2>Spacious House</h2>
-        <p class="price">$2,500/month</p>
-        <p class="location">Location: Nairobi</p>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum accumsan nibh vitae ultricies. Suspendisse in tristique erat.</p>
-      </div>
-    </div>
-
-
-    <div class="house">
-      <img src="./images/house2.jpg" alt="House 2">
-      <div class="house-info">
-        <h2>Modern Apartment</h2>
-        <p class="price">$1,800/month</p>
-        <p class="location">Location: Mombasa</p>
-        <p class="description">Vestibulum consectetur velit vitae ligula lobortis varius. Aliquam in tincidunt urna, sit amet commodo sem.</p>
-      </div>
-    </div>
 
 
   
-
-    <div class="house">
-      <img src="./images/house3.jpg" alt="House 3">
-      <div class="house-info">
-        <h2>Cozy Bungalow</h2>
-        <p class="price">$1,200/month</p>
-        <p class="location">Location: Kisumu</p>
-        <p class="description">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-      </div>
+<!-- <button id="ss">send</button> -->
     </div>
+  </header>
 
-    
 
+<!-- add section -->
 
-    <div class="house">
-      <img src="./images/house4.jpg" alt="House 4">
-      <div class="house-info">
-        <h2>Charming Villa</h2>
-        <p class="price">$3,000/month</p>
-        <p class="location">Location: Eldoret</p>
-        <p class="description">Nunc et sollicitudin augue. Etiam quis ex in nisl lacinia rhoncus at a dui.</p>
-      </div>
-    </div>
+  <div class="container">
+  
+
 
   </div>
+
+
+
+
+ <!--housing section-->
+    <div class="house-listings">
+    </div> 
+
   <!-- happy clients section -->
   <h2>Happy Clients</h2>
 <div class="clients">
@@ -92,65 +63,6 @@
     </div>
 </div>
 
-<!-- about section -->
-
-<div class="about">
-    <h1>About Us</h1>
-    <img src="./images /5-features-families-want-in-rental-homes.jpg">
-    <div id="mission"><h2>Mission</h2>
-    <p>At Urban Nest, our mission is to provide accessible and affordable housing solutions in urban areas.<br>
-        We understand the challenges individuals face when searching for suitable rental properties,<br> and we
-        aim to simplify the process by offering a user-friendly platform that connects tenants with landlords.
-       </p>
-    </div>
-    <div id="vision">
-       <h2>Vision</h2>
-    <p> Our vision is to create a seamless and efficient housing experience for everyone.<br> We believe that everyone deserves a comfortable and safe place to call home,<br> and we strive to bridge the gap between tenants and landlords, ensuring transparency, reliability, and satisfaction for both parties.
-    </p>
-</div>
-    <div id="location">
-        <h1>Location</h1>
-        <p>Our offices are located in thika town </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.1618745546475!2d37.069680074267886!3d-1.0393610989506366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f4e62715d436f%3A0xab64e609237cb7f5!2sThika%20Town!5e0!3m2!1sen!2ske!4v1688552177800!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <h3>Working Hours</h3>
-        <p>opening: 9:00am</p>
-        <p>closing: 4:00 pm</p>
-    </div>
-  
-    </div>
-
-
-    <!-- contact section -->
-<div class="contact">
-    <h1>Contact Us</h1>
-    <div id="inputss">
-    <input type="text" placeholder="name" id="name">
-    <input type="text" placeholder="email" id="email">
-  </div>  
-  <div id="inputs">
-    <input type="text" placeholder="message" id="message">
-  </div>
-    <button id="btn ">Send</button>
-<div class="social">
-    <h2>Social Media Platforms</h2>
-      <div id="whatsapp">
-        <p>Whatsapp</p>
-        <a href="https://wa.me/+2540112043557" target="_blank">  
-        <img src="./images /whatsapp bs.png"></a>
-    </div>
-    <div id="facebook">
-        <p>Facebook</p>
-        <a href="https://www.facebook.com/Alexi Alex" target="_blank">
-        <img src="./images /facebook logo .png"></a>
-        </div>
-        <div id="twitter">
-            <p>twitter</p>
-        <a href="https://twitter.com/@AlexiGikun71556" target="_blank">
-        <img src="./images /twitter logo .png"></a>
-
-        </div>
-</div>
-</div>
 <!--  footer section -->
   <footer>
     <p>Contact:(+254) 112043557</p>
@@ -162,7 +74,7 @@
         <li>Contact Us</li>
         <li>Location</li>
     </ul>
-    </div>
+    </div>  
   </footer>
   <script src="scripts.js"></script>
 </body>
